--- a/config/config.json
+++ b/config/config.json
@@ -7,20 +7,22 @@
             "submiturl": "http://0.0.0.0:37399",
             "contract": "0xa6D2b331B03fdDB8c6A8830A63fE47E42c4bDF4D",
             "keypath": ".relayer/wallet/top",
-            "blockcertainty": 60,
-            "subBatch": 10,
-            "verifyblock": false
+            "blockcertainty": 0,
+            "subBatch": 100,
+            "verifyblock": false,
+            "start": true
         },
         {
             "listenchainid": 6868,
             "listenurl": "http://0.0.0.0:37399",
             "submitchainid": 1337,
             "submiturl": "http://192.168.30.32:8545",
-            "contract": "0xa6D2b331B03fdDB8c6A8830A63fE47E42c4bDF4E",
+            "contract": "0xf04e16dae6887e8cf235f0179b50e0cd1860647c",
             "keypath": ".relayer/wallet/eth",
             "blockcertainty": 60,
-            "subBatch": 10,
-            "verifyblock": false
+            "subBatch": 100,
+            "verifyblock": false,
+            "start": true
         }
     ]
 }
